<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/teachercardview"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="10dp"
        android:padding="20dp">

        <TextView

            android:id="@+id/staffname"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:text="Teachers name"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="40dp"
            android:background="@color/standardwhite"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/q1" />

            <TextView
                android:id="@+id/b1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="1" />

            <TextView
                android:id="@+id/b2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="2" />

            <TextView
                android:id="@+id/b3"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="3" />

            <TextView
                android:id="@+id/b4"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="4" />

            <TextView
                android:id="@+id/b5"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="75dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/q2" />

            <TextView
                android:id="@+id/b11"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="1" />

            <TextView
                android:id="@+id/b12"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="2" />

            <TextView
                android:id="@+id/b13"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="3" />

            <TextView
                android:id="@+id/b14"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="4" />

            <TextView
                android:id="@+id/b15"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="105dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/q3" />

            <TextView
                android:id="@+id/b21"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="1" />

            <TextView
                android:id="@+id/b22"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="2" />

            <TextView
                android:id="@+id/b23"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="3" />

            <TextView
                android:id="@+id/b24"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="4" />

            <TextView
                android:id="@+id/b25"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="140dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/q4" />

            <TextView
                android:id="@+id/b31"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="1" />

            <TextView
                android:id="@+id/b32"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="2" />

            <TextView
                android:id="@+id/b33"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="3" />

            <TextView
                android:id="@+id/b34"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="4" />

            <TextView
                android:id="@+id/b35"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="175dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/q5" />

            <TextView
                android:id="@+id/b41"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="1" />

            <TextView
                android:id="@+id/b42"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="2" />

            <TextView
                android:id="@+id/b43"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="3" />

            <TextView
                android:id="@+id/b44"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="4" />

            <TextView
                android:id="@+id/b45"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="210dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/q6" />

            <TextView
                android:id="@+id/b51"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="1" />

            <TextView
                android:id="@+id/b52"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="2" />

            <TextView
                android:id="@+id/b53"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="3" />

            <TextView
                android:id="@+id/b54"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="4" />

            <TextView
                android:id="@+id/b55"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:text="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/elaborate"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:text="Mention the changes you would like to see " />

            <EditText
                android:id="@+id/elaborateans"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:hint="Any Specific Changes" />

            <Button
                android:id="@+id/submitbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="SUBMIT" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>